force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/FEC_BCH_Import_Work_Item__c.object-meta.xml
<CustomObject>
    <label>BCH Import Work Item</label>
    <nameField>
        <label>BCH Import Work Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BCH Import Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>