force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/fields/FEC_Batch_Case_Handling__c.field-meta.xml
<CustomField>
    <fullName>FEC_Batch_Case_Handling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Case Handling</label>
    <referenceTo>FEC_Batch_Case_Handling__c</referenceTo>
    <relationshipLabel>BCH Import Work Items</relationshipLabel>
    <relationshipName>BCH_Import_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>