force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/fields/FEC_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>