force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/fields/FEC_Row_Error__c.field-meta.xml
<CustomField>
    <fullName>FEC_Row_Error__c</fullName>
    <label>Row Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>