force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/fields/FEC_Row_Index__c.field-meta.xml
<CustomField>
    <fullName>FEC_Row_Index__c</fullName>
    <label>Row Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>