force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/fields/FEC_Row_Payload__c.field-meta.xml
<CustomField>
    <fullName>FEC_Row_Payload__c</fullName>
    <label>Row Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>