force-app/main/default/objects/FEC_BCH_Import_Work_Item__c/fields/FEC_Row_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Row_Status__c</fullName>
    <label>Row Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>